<resources>
    <string name="app_name">FunBox</string>
    <!--主页标题-->
    <string name="splash_jump">跳过</string>
    <string name="home_item_title_cpp">cpp</string>
    <string name="home_item_title_recording">recording</string>
    <string name="home_item_title_shake">Shake</string>
    <string name="home_item_title_sideslip">Sideslip</string>
    <string name="home_item_title_music">Local  Music</string>
    <string name="home_item_title_carmra">多媒体</string>
    <string name="home_item_title_spp_ble">spp ble</string>
    <string name="home_item_title_sms">sms</string>
    <string name="home_item_title_qr">QR code</string>
    <string name="home_item_title_notification">notification</string>
    <string name="home_item_title_broadcast">broadcast</string>
    <string name="home_item_title_ani">ani</string>
    <string name="home_item_title_audio">Audio</string>
    <string name="home_item_title_aidl">AIDL</string>
    <string name="home_item_title_service">service</string>
    <string name="home_item_title_popup_window">PopupWindow</string>
    <string name="home_item_title_popup_soundpool">SoundPool</string>
    <string name="home_item_title_snap_helper">RecyclerView + SnapHelper</string>
    <string name="home_item_title_label">标签选择</string>
    <string name="home_item_title_canvas">CanvasFragment</string>
    <string name="home_item_title_fmod">Fmod</string>
    <string name="home_item_title_coord">CoordinatorLayout布局</string>
    <string name="home_item_title_beat">心跳动画</string>
    <string name="home_item_title_circle_ani">圆形进度条</string>
    <string name="home_item_title_fade_ani">淡入淡出动画</string>
    <string name="home_item_title_disklru">DiskLru</string>
    <string name="home_item_title_cut">自定义裁剪</string>
    <string name="home_item_title_other">Other</string>
    <string name="home_item_title_sensor">传感器</string>
    <string name="home_item_title_viewpager">ViewPager</string>
    <string name="home_item_title_wifi">Wifi</string>
    <!--Rb2-->
    <string name="rb2_item_title_popup_face_recognition">face recognition</string>
    <string name="rb2_item_title_popup_video">video</string>
    <string name="rb2_item_title_popup_webview">WebView</string>
    <string name="rb2_item_title_popup_annotations">annotations</string>
    <string name="rb2_item_title_popup_screen">screen record</string>
    <string name="rb2_item_title_popup_retrofit">retrofit 2.0</string>
    <string name="rb2_item_title_popup_greendao">GreenDao</string>
    <string name="rb2_item_title_popup_wifi">WifiList</string>
    <string name="rb2_item_title_popup_video_fingerprint">Fingerprint</string>
    <string name="rb2_item_title_popup_video_websocket">webSocket</string>
    <string name="rb2_item_title_popup_video_okhttp">OkHttp WebSocket</string>
    <string name="rb2_item_title_popup_video_socket">Socket</string>
    <string name="rb2_item_title_popup_video_pic">pic picker</string>
    <string name="rb2_item_title_popup_video_args">args</string>
    <string name="rb2_item_title_popup_video_view_flippe">ViewFlippeFragment</string>
    <string name="rb2_item_title_popup_video_tx">t x5 browser</string>
    <string name="rb2_item_title_popup_video_rx">rx重试机制</string>
    <string name="rb2_item_title_swiperefresh">Swiperefreshlayout</string>
    <string name="rb2_item_title_x_recyclerview">Xrecyclerview</string>
    <!--rb3-->
    <string name="rb3_item_title_shiro">shiro权限框架测试</string>
    <string name="rb3_item_title_rgb">rgb</string>
    <string name="rb3_item_title_color_picker_h">拾色器h</string>
    <string name="rb3_item_title_color_picker_v">拾色器v</string>
    <string name="rb3_item_title_popup_video_gesture">手势</string>

    <string name="app_exit">再按返回键退出程序</string>
    <string name="app_title">Title</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="action_settings">Settings</string>

    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>


    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>
    <!--权限相关-->
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="quit">退出</string>
    <string name="string_help_text1">缺少必要权限-</string>
    <string name="string_help_text2">请点击\"设置\"-\"权限\"-打开所需权限</string>
    <string name="string_help_text3">最后点击两次后退按钮，即可返回</string>

    <string name="permission_record">麦克风</string>
    <string name="permission_camera">相机</string>
    <string name="permission_memory">存储空间</string>
    <string name="permission_phone_state">手机状态</string>
    <string name="permission_location">位置信息</string>
    <!--CameraFragment-->
    <string name="camera_competele">complete</string>
    <string name="set_proxy">Set Proxy</string>
    <string name="shake_off">off</string>
    <string name="shake_on">on</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
